Closed
Bug 1396643
Opened 8 years ago
Closed 8 years ago
[Clang 5.0] dom/media/ipc/RemoteVideoDecoder.cpp:70:19: error: lambda capture 'this' is not used [-Werror,-Wunused-lambda-capture]
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | --- | unaffected |
| firefox57 | --- | fixed |
People
(Reporter: jbeich, Assigned: jbeich)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
$ c++ -v
FreeBSD clang version 5.0.0 (branches/release_50 312293) (based on LLVM 5.0.0svn)
Target: x86_64-unknown-freebsd12.0
Thread model: posix
InstalledDir: /usr/bin
$ echo "ac_add_options --enable-warnings-as-errors # mimic MOZ_AUTOMATION" >>.mozconfig
$ ./mach build
[...]
dom/media/ipc/RemoteVideoDecoder.cpp:70:19: error: lambda capture 'this' is not used
[-Werror,-Wunused-lambda-capture]
[self, this](const MediaResult& aError) {
^
1 error generated.
| Comment hidden (mozreview-request) |
Comment 2•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8904330 [details]
Bug 1396643: Fix compilation when warning as error is set.
https://reviewboard.mozilla.org/r/176106/#review181076
Attachment #8904330 -
Flags: review?(cpearce) → review+
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1c472f0b2449
Fix compilation when warning as error is set. r=cpearce
Updated•8 years ago
|
Blocks: clang-based-analysis
Updated•8 years ago
|
Assignee: nobody → jbeich
Comment 4•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Updated•8 years ago
|
status-firefox55:
--- → unaffected
status-firefox56:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Updated•8 years ago
|
Blocks: Wunused-lambda-capture
Updated•7 years ago
|
Blocks: build-clang-trunk
Updated•7 years ago
|
No longer blocks: clang-based-analysis
You need to log in
before you can comment on or make changes to this bug.
Description
•