Bug 1396643: Fix compilation when warning as error is set. r=cpearce

MozReview-Commit-ID: Ar2Ttk5hkGD